fix logo on mobile

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1501,6 +1501,14 @@ input, select, textarea {
 
 		}
 
+		@media (max-width: 768px) {
+			#header img {
+				width: 100%;
+				height: auto;
+				max-width: 300px;
+			}
+		}
+
 /* Main */
 
 	#main {
